# NetworkMapping

./: README.md
EA/: CMakeLists.txt
EA/include/: EA.h  EAParameters.h  Fitness.h  Individual.h  Mutation.h  Network.h  NetworkMapping.h  Population.h  Selection.h
EA/parameters/: README
EA/solver/: CMakeLists.txt  Makefile  Solver.cpp
EA/src/: CMakeLists.txt  Competition.cpp  Competition.h  Crossover.cpp  Crossover.h  EA.cpp  EA.h  EAParameters.cpp  Fitness.cpp  Fitness.h  Individual.h  Initialization.cpp  Initialization.h  Mutation.cpp  Network.cpp  Network.h  NetworkMapping.cpp  NetworkMapping.h  Population.cpp  Selection.cpp  Selection.h  parse.cpp  parse.h
EA/test/: Makefile  TestEA.cpp  TestNetwork.cpp  TestNetworkMapping.cpp  TestParse.cpp
EA/tests/: CMakeLists.txt  TestEA.cpp  TestEAParameters.cpp  TestNetwork.cpp  TestNetworkMapping.cpp
EA/tests/inputs/: parameters1.txt  test_network1.txt
EA/tmp/: CMakeLists.txt  CheckValidity.cpp
GraphGenerator/: CMakeLists.txt
GraphGenerator/include/: GraphGenerator.h
GraphGenerator/src/: CMakeLists.txt  GraphGenerator.cpp
inputs/generate_script/: generate_physical.sh  generate_virtual.sh
inputs/generate_script/physical/: PN100_D0.5_NW10-20_EW5-10  PN100_D1_NW10-20_EW5-10  PN200_D0.5_NW5-10_EW5-10  PN200_D1_NW10-20_EW10-100  PN200_D1_NW10-20_EW5-10  PN300_D0.5_NW10-20_EW5-10  PN300_D1_NW5-10_EW1-5  PN400_D0.5_NW10-20_EW10-100  PN400_D1_NW10-20_EW10-100  PN400_D1_NW5-10_EW1-5  PN500_D0.5_NW10-20_EW10-100  PN500_D0.5_NW5-10_EW1-5  PN500_D1_NW10-20_EW5-10  PN500_D1_NW5-10_EW1-5  PN500_D1_NW5-10_EW5-10
(+13 files in other folders)
